--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,10 +30,11 @@
     </div>
 
     <div class="social-links">
-      <p><a href="{{ site.baseurl }}/">kikuKeii</a>&copy; Copyright 2020 </p><br>
       {%- include social.html -%}
     </div>
-
+    <div align="center" class=" copyright">
+      <p><a href="{{ site.baseurl }}/">kikuKeii</a>&copy; Copyright 2020 </p><br>
+    </div>
   </div>
 
 </footer>
