--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -32,6 +32,7 @@ body {
   min-height: 100vh;
   flex-direction: column;
   overflow-wrap: break-word;
+  background: -webkit-linear-gradient(left, #3931af, #00c6ff);
 }
 
 
@@ -204,6 +205,7 @@ pre {
   padding-right: $spacing-unit / 2;
   padding-left: $spacing-unit / 2;
   @extend %clearfix;
+  border-radius: 25px;
 
   @media screen and (min-width: $on-large) {
     max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
@@ -241,7 +243,7 @@ pre {
   width: 16px;
   height: 16px;
   display: inline-block;
-  fill: currentColor;
+  fill: #FFF;
   padding: 5px 3px 2px 5px;
   vertical-align: text-bottom;
 }
