--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -24,7 +24,7 @@
 
   &,
   &:visited {
-    color: $site-title-color;
+    color: #fff;
   }
 }
 
@@ -33,7 +33,6 @@
   top: 9px;
   right: $spacing-unit / 2;
   background-color: $background-color;
-  border: 1px solid $border-color-01;
   border-radius: 5px;
   text-align: right;
 
@@ -74,7 +73,7 @@
   }
 
   .page-link {
-    color: $text-color;
+    color: #fff;
     line-height: $base-line-height;
     display: block;
     padding: 5px 10px;
@@ -144,7 +143,7 @@
 .footer-col-wrapper,
 .social-links {
   @include relative-font-size(0.9375);
-  color: $brand-color;
+  color: #fff;
 }
 
 .footer-col {
