--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
 
   {%- include custom-head.html -%}
 
+  <link rel="stylesheet" href="{{ stite.baseurl }}/assets/bootstrap/css/bootstrap.min.css">
 </head>
