--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,11 @@
     </main>
 
     {%- include footer.html -%}
-
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/bootstrap/js/jquery.slim.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/qube.js"></script>
+    
   </body>
 
 </html>
