--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
   {%- include custom-head.html -%}
 
   <link rel="stylesheet" href="{{ stite.baseurl }}/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ stite.baseurl }}/assets/bootstrap/css/bootstrap.css">
 </head>
