--- a/assets/bootstrap/css/bootstrap.css
+++ b/assets/bootstrap/css/bootstrap.css
@@ -4682,8 +4682,8 @@ input[type="button"].btn-block {
   margin-left: -1px;
   line-height: 1.25;
   color: #007bff;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
+  /* background-color: #fff;
+  border: 1px solid #dee2e6; */
 }
 
 .page-link:hover {
