--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
       {%- include social.html -%}
     </div>
     <div align="center" class="copyright">
-      <p><a href="{{ site.baseurl }}/">kikuKeii</a>&copy; Copyright 2020 </p><br>
+      <a href="{{ site.baseurl }}/">kikuKeii</a>&copy; Copyright 2020<br>
     </div>
   </div>
 
