--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -32,7 +32,7 @@
   position: absolute;
   top: 9px;
   right: $spacing-unit / 2;
-  background-color: $background-color;
+  // background-color: $background-color;
   border-radius: 5px;
   text-align: right;
 
