--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
     </main>
 
     {%- include footer.html -%}
-    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/assets/bootstrap/js/jquery.slim.min.js"></script>
-    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/qubi.js"></script>
+    <script src="{{ stite.baseurl }}/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{ stite.baseurl }}/assets/bootstrap/js/jquery.slim.min.js"></script>
+    <script src="{{ stite.baseurl }}/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ stite.baseurl }}/assets/js/qubi.js"></script>
     
   </body>
 
