--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="icon" type="image/png" href="{{ stite.baseurl }}/assets/images/icon.png"> 
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/icon.png"> 
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
@@ -14,6 +14,6 @@
 
   {%- include custom-head.html -%}
 
-  <link rel="stylesheet" href="{{ stite.baseurl }}/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ stite.baseurl }}/assets/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap/css/bootstrap.css">
 </head>
