--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
     {% assign posts = site.posts %}
   {% endif %}
 
-
+<h5>New Post  &darr;&darr;&darr;</h5>
   {%- if posts.size > 0 -%}
     {%- if page.list_title -%}
       <h2 class="post-list-heading">{{ page.list_title }}</h2>
