--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,19 +6,34 @@
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <img src="{{ site.baseurl }}/assets/images/cc.jpg" width="80px" height="80px" />
-      {%- if site.author %}
+        {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
+          <li class="p-name">{{ site.author.name | escape }}</li>
           {% endif -%}
           {% if site.author.email -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+          <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
           {%- endif %}
         </ul>
-      {%- endif %}
+        {%- endif %}
       </div>
       <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
+        <p>{{ site.description | escape }}</p><br>
+        <!-- Histats.com  (div with counter) -->
+        <div id="histats_counter"></div>
+        <!-- Histats.com  START  (aync)-->
+        <script type="text/javascript">var _Hasync = _Hasync || [];
+          _Hasync.push(['Histats.start', '1,4464773,4,16,150,30,00011111']);
+          _Hasync.push(['Histats.fasi', '1']);
+          _Hasync.push(['Histats.track_hits', '']);
+          (function () {
+            var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+            hs.src = ('//s10.histats.com/js15_as.js');
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+          })();</script>
+        <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4464773&101" alt=""
+              border="0"></a></noscript>
+        <!-- Histats.com  END  -->
       </div>
     </div>
 
