--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,10 @@
       </div>
       <div class="footer-col">
         <p>{{ site.description | escape }}</p><br>
+        <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
+        <script
+          type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'X8X031K5P'); kofiwidget2.draw();</script>
+        <br>
         <!-- Histats.com  (div with counter) -->
         <div id="histats_counter"></div>
         <!-- Histats.com  START  (aync)-->
